--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ h1,h2,h3,h4,h5,h6{
     padding-top: 50px;
 }
 .signin-btn{
-    margin: auto;
-    padding: 13px 30px 5px 30px;
+    padding: 12px 30px 12px 30px;
     text-align: center;
     border-radius: 25px;
     border: none;
     background: #21B573;
-    color: white;
+    color: white !important;
+    text-decoration: none;
+    font-weight: 600;
 }
 .col-md-7 img{
     width: 90%;
@@ -73,15 +74,12 @@ h1,h2,h3,h4,h5,h6{
     width: 68px;
     height: 76px;
 }
-.col-md-3{
-    height: 270px;
-    width: 270px;
-}
 .ad{
-    margin: 0 28px;
+   text-align: center;
     background-color: #F0FFF0;
     border-radius: 10px;
     transition: .4s;
+    margin-bottom: 10px;
 }
 .ad:hover{
     background-color: white;
@@ -115,7 +113,7 @@ h1,h2,h3,h4,h5,h6{
     padding-top: 20px;
 }
 .col-md-2 img{
-    width: 80%;
+    width: 100%;
     height: 100%;
     box-shadow: 1px 1px 5px rgb(129, 124, 124);
     border-radius: 50%;
